jakegealer-me/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jakegealer-me
  labels:
    run: jakegealer-me
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: jakegealer-me
